# princer

./: .env.example  .gitignore  CHANGELOG.md  PRD.md  README.md  pyproject.toml
config/: default.yaml  naming_rules.md
docs/: quickstart.md
princer/: __init__.py  cli.py
princer/core/: __init__.py  config.py
princer/models/: __init__.py  audio.py
princer/services/: acoustid.py  llm.py  musicbrainz.py  princevault.py
